website: break words on LP to avoid overflows

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,10 @@ span {
 	text-overflow: ellipsis;
 }
 
+.word-break-all {
+    word-break: break-all;
+}
+
 .is-hidden-without-js {
     display: none !important;
 }
